# pjct3_django

./: .gitignore  README.md  pyproject.toml
like_instagram/: manage.py
like_instagram/app_instagram/: forms.py  models.py  urls.py  views.py
like_instagram/app_instagram/migrations/: 0001_initial.py  0002_picture_user.py
like_instagram/app_instagram/templates/app_instagram/: base.html  edit.html  index.html  pictures.html  upload.html
like_instagram/like_instagram/: asgi.py  settings.py  urls.py  wsgi.py
like_instagram/users/: forms.py  urls.py  views.py
like_instagram/users/templates/users/: logout.html  signin.html  signup.html
